--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif
     margin: 40px;
     padding: 40px;
     color: #242424;
@@ -13,23 +13,52 @@ body {
 
 h1 {
     font-size: 3em;
+    font-weight: 800;
+    margin: 0;
+}
+h2 {
+    font-size: 2em;
+    font-weight: 800;
     margin: 0;
 }
 
 p {
     line-height: 1.4em;
 }
-
-#author {
-    
+table {
+    border: 1px solid;
 }
 
-.article {
-    border-bottom: 1px dotted #ccc;
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 30px;
+    text-align: center;
+    padding: 10px;
+
 }
 
-.crop {
-    height: 100px;
-     width: 100px;
-    overflow: hidden
+form {
+    padding: 10px;
+    margin: 10px;
+}
+
+article {
+    border-bottom: 2px solid #ccc;
+    margin: 50px;
+
+}
+
+.author {
+    font-weight: 400;
+    color: blanchedalmond;
+}
+
+#blog {
+    font-weight: 100px;
+}
+
+.blog-post {
+    border-bottom: 2px solid #ccc;
+    margin: 50px;
 }
